[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Player/Playership.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player2.png" type="Texture" id=3]
[ext_resource path="res://UI/Selector.gd" type="Script" id=4]
[ext_resource path="res://Assets/Background/Animated Background.ogv" type="VideoStream" id=5]

[node name="Selector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 5 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Select Your Ship"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player 1" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -150.0
margin_right = 114.0
margin_bottom = -50.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player 2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -150.0
margin_right = 80.0
margin_bottom = -50.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player 3" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -150.0
margin_right = -10.0
margin_bottom = -50.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Player 1" to="." method="_on_Player_1_pressed"]
[connection signal="pressed" from="Player 2" to="." method="_on_Player_2_pressed"]
[connection signal="pressed" from="Player 3" to="." method="_on_Player_3_pressed"]
